--- a/test/notebooks/api.ipynb
+++ b/test/notebooks/api.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from IPython.display import JSON\n",
     "\n",
-    "DEBUG = False\n",
+    "DEBUG = True\n",
     "\n",
     "url = f\"https://docker78406-saas-kit.jcloud.ik-server.com\"\n",
     "\n",
@@ -32,75 +32,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Authentication service"
+    "## Authentication service\n",
+    "\n",
+    "### Login"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "accessToken": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJwdXJwIjoiYWNjZXNzIiwicm9sZSI6InN1cGVyIGFkbWluIiwiaW5zdCI6ImM1MjYzNTcwb25vNHVpOHFmaGdnIiwiYXVkIjoic2Fhcy1raXQiLCJleHAiOjE2Mzc3NTA0NzcsImlhdCI6MTYzNzc0OTU3NywiaXNzIjoiYXV0aCIsInN1YiI6ImM2Nm1zbG9oZjE3c3M3aDhodnUwIn0.PE0JYfQbdbqQCWdPe6kbeJnaQk9LnhYpGHQ8H9aHdRJobv5kjqsi93BFAr-shHM08HVlKpULztxXYrSgTuCotxKkkcP72E7ayVKtRB2ssccwpdrAwpqp7Fz2US17SgnL-Ra7uLNw_nng3pqaYVXswvOTIuGN6s86NHtSx1alKMrEmr9s4MPgeUWwwV0Ea-S8cvJr9ZdjD49NsRnIBKTvY1oGUyk59a7AH3HnJvA-pHQ14iQIbC06atgQAEsEPcAfOc6Ttz6_5whkXSgP1KT-_4X_HH_p2OhUbPlDk8sk0J4ncG2HbQ_vTcDrIorsPELY1o3ew5VqWGhMfPYmefH3aZTjTAzgGShKtVM1_RJYmwJl1mCC_GdgObFyh2lsefS6oFjRngNy9oJfkJo96mKDV1ibrhmPc1KMYBeJ53c69DAkS5Ep_EHU56MW8V98_X42ybh3LZsoLt-lYyji5WAjNKg1RPZRkNLjHx4dksOsW4-ZmIu1JM6JUyRRw7CJGTM2_HLiVy5O-3oFCJrzw1OOQzM5m_859Ka1IcEv5v4IXCdDqKrKluieuUM_otgoP_TmZCD2k4KeV1xf6E2hHWbirdvOYFeGBsAz8_NqN5gP-G4ccEm0cwq4U853XKwlNs6L5L9xahRG-1HS3464TylXITeB-g_0fyLz8UzRnYaAIvs",
-       "refreshToken": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJwdXJwIjoicmVmcmVzaCIsImluc3QiOiJjNTI2MzU3MG9ubzR1aThxZmhnZyIsImF1ZCI6InNhYXMta2l0IiwiZXhwIjoxNjM4MzU0Mzc3LCJpYXQiOjE2Mzc3NDk1NzcsImlzcyI6ImF1dGgiLCJzdWIiOiJjNjZtc2xvaGYxN3NzN2g4aHZ1MCJ9.ELjRW13RyRCIkTA4vbhXa5ojN2AKMS_r3Yh9BmVqrCff5dmHmF_OrXevSGNnrrQy5ow45_uxpyg9aHAe1Yx2simEaQWB67IUBQtys-Y23eMG3zLqiBoBfkHhf7Etig6lYwdMkm0Dvzo2zBCgLUkH-m7iVuhc0aVBIx7fmrr88xNgonmexXWtPVrf__Mt2rqE6n-r10PVVQT2sBtxceJJzT99uqw8GY1-wmDrzmzwytyC1NRjocj1-r2j-BA-9bQw9gQ1mvdYUKy8UXMY43z-emhD5_Wb4WBr7rN5StW5-CzX9-W6wbKFNo-8jyEurO90CU0shV9Chfg4qtlP7kBjHpGvrYdqc7sYXh-sTDA5DI-F_HtQAE23qqHxSkllHQokrYdEOzhWeV9izbUix5y0_f_jSy2duRUZewI0fbBkxg4mfEviBEWl3aCTm_ZvQkrHayGTyJZ0LeG8qDeH-9bfn3e4J6BNIAGEhmiFMGg2aiBP-8uBxlxjPwk2wH_tW3c1mE45gkaodYlgp8VAb66P--ZBt4f5gj3Ft1angT4JJkLrqYM6KEGmyu89WgXu05xIIefTGnZo_gtuM1uAZ_LBAvDA_PLnOQwsb3_x-5txAgR1yN38RlvgznX1f2mKpFRGjhBpxs-2IeaNCT1XuQOU_V6onDFLO8ZCdsnxeAX8NXw",
-       "role": "super admin",
-       "rolesSpec": [
-        {
-         "inherited": [
-          "",
-          "super admin"
-         ],
-         "role": "super admin"
-        },
-        {
-         "inherited": [
-          "",
-          "instance admin",
-          "event organizer",
-          "teacher"
-         ],
-         "role": "instance admin"
-        },
-        {
-         "inherited": [
-          "",
-          "event organizer",
-          "teacher"
-         ],
-         "role": "event organizer"
-        },
-        {
-         "inherited": [
-          "",
-          "teacher"
-         ],
-         "role": "teacher"
-        }
-       ]
-      },
-      "text/plain": "<IPython.core.display.JSON object>"
-     },
-     "execution_count": 73,
-     "metadata": {
-      "application/json": {
-       "expanded": false,
-       "root": "root"
-      }
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Login\n",
     "payload = {\n",
     "    'email': 'simon@smartnuance.com',\n",
     "    'password': 'f00bartest',\n",
@@ -114,36 +56,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 68,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "accessToken": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJwdXJwIjoiYWNjZXNzIiwicm9sZSI6InN1cGVyIGFkbWluIiwiaW5zdCI6ImM1MjYzNTcwb25vNHVpOHFmaGdnIiwiYXVkIjoic2Fhcy1raXQiLCJleHAiOjE2Mzc3NTAwNDMsImlhdCI6MTYzNzc0OTE0MywiaXNzIjoiYXV0aCIsInN1YiI6ImM2Nm1zbG9oZjE3c3M3aDhodnUwIn0.g3et4XasbHFDBQsiF1uFZJnjVqfs0grsuseF_Sy9hJT5hkK8_nSNh6xILpI74k0PbkFuWQUFGd5ORfT3M8niiWDN0jPlfVcZ_OpllgWwCPObqnyfr3Zy1j1wRPx1Wc63i4gR_9C1Ixbpnu7xKD1yXTXh3EtJ2iBwJ1iOyqykHmXHKn5klOY_nZF-DsTfO4KLLbv9UBjDYkD1n_nToIaAgZirSv1bMvE-Bu1klQrpF4I8F7DxrjlkxhFkVmjWHsu6rtPFR5D4h_MU0ZEB4VMf-2O6wdfQR--oPIXZu0BDItk5Ru7Lq8AkgdQ3Jp5jdmATYw-KtZLj5aBZKp2XaQvzjm-v0OmLAWwEnEcEIoxOYpiSg-DGcg5xw8M2O3_kExg2YiKQ2Chg3fXDwGeEnc4M2lR0jfZfnG-RAHi7xALo1cqDGoxvtUCXA16__sJ58ATGgRMLZhwDltVSGnj3boOWpbmAcBCoMcM1wMpgKSEaMGCZ-zVtE43RxskG4JpDk0VMkQjRFDko36gNUJ08z01XkvRAPOf4NgQ5XvpH5mjYPCJ7mgUdWyTJhUAkos7N73Y-9zkpSYsxeEIozDY4rqwzSs6r8nMZUqUE_u4BAxiTvxwW5Fa6JUs3u_BkDuTgjv6CnoLVX8hITOEYM4oWS_Xf2u05QyQeVm4nnDC9mzBTexY"
-      },
-      "text/plain": "<IPython.core.display.JSON object>"
-     },
-     "execution_count": 68,
-     "metadata": {
-      "application/json": {
-       "expanded": false,
-       "root": "root"
-      }
-     },
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Refresh tokens\n",
+    "### Refresh tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "payload = {\n",
     "    'refreshToken': login_res[\"refreshToken\"],\n",
     "}\n",
@@ -156,20 +80,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 69,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    }
-   ],
    "source": [
-    "# Revoke all tokens for a user\n",
+    "### Revoke all tokens for a user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "payload = {\n",
     "    'email': 'simon@smartnuance.com',\n",
     "}\n",
@@ -184,45 +106,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interact with event service"
+    "## Interact with event service\n",
+    "\n",
+    "### Create workshop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "201\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "message": "workshop created successfully!",
-       "status": 201,
-       "workshopID": "c6f135ohf17s5f6tv1q0"
-      },
-      "text/plain": "<IPython.core.display.JSON object>"
-     },
-     "execution_count": 70,
-     "metadata": {
-      "application/json": {
-       "expanded": false,
-       "root": "root"
-      }
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create event\n",
+    "\n",
     "payload = {\n",
     "    'title': 'Bachata',\n",
+    "    'slug': 'bachata',\n",
     "    'locationName': 'Ponto',\n",
+    "    'locationURL': 'https://goo.gl/maps/wE3viADXW1CB7LNP9',\n",
     "}\n",
     "auth_header = {\n",
     "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
@@ -237,86 +137,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "items": [
-        {
-         "couples": false,
-         "event": {
-          "instance": "c5263570ono4ui8qfhgg",
-          "locationName": "Ponto",
-          "starts": "0001-01-01T00:00:00Z",
-          "title": "Bachata"
-         },
-         "eventID": "c66n7g0hf17s54lr7mcg",
-         "id": "c66n7g0hf17s54lr7md0",
-         "locationName": "Ponto",
-         "starts": "2021-11-14T20:00:00Z",
-         "title": "Bachata"
-        },
-        {
-         "couples": false,
-         "event": {
-          "instance": "c5263570ono4ui8qfhgg",
-          "locationName": "Gazebo",
-          "starts": "0001-01-01T00:00:00Z",
-          "title": "Salsa"
-         },
-         "eventID": "c66n79ghf17s54lr7mbg",
-         "id": "c66n79ghf17s54lr7mc0",
-         "locationName": "Gazebo",
-         "starts": "2021-11-12T19:30:00Z",
-         "title": "Salsa"
-        },
-        {
-         "couples": false,
-         "event": {
-          "instance": "c5263570ono4ui8qfhgg",
-          "locationName": "Ponto",
-          "starts": "0001-01-01T00:00:00Z",
-          "title": "Bachata"
-         },
-         "eventID": "c6f135ohf17s5f6tv1pg",
-         "id": "c6f135ohf17s5f6tv1q0",
-         "locationName": "Ponto",
-         "starts": "0001-01-01T00:00:00Z",
-         "title": "Bachata"
-        }
-       ],
-       "paging": {
-        "cur": {
-         "end": "c6f135ohf17s5f6tv1q0",
-         "size": 3,
-         "start": "c66n7g0hf17s54lr7md0"
-        }
-       }
-      },
-      "text/plain": "<IPython.core.display.JSON object>"
-     },
-     "execution_count": 71,
-     "metadata": {
-      "application/json": {
-       "expanded": false,
-       "root": "root"
-      }
-     },
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# List events\n",
+    "### List workshops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "auth_header = {\n",
     "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
     "    'role': 'event organizer',\n",
@@ -324,14 +156,44 @@
     "}\n",
     "response = client.get(f'{url}/event/workshop/list', headers=dict(headers, **auth_header))\n",
     "print(response.status_code)\n",
+    "workshops = response.json()[\"items\"]\n",
     "JSON(response.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete workshop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id = workshops[0][\"id\"]\n",
+    "print(f\"delete {id}\")\n",
+    "\n",
+    "auth_header = {\n",
+    "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
+    "    'role': 'event organizer',\n",
+    "    'instance': 'c5263570ono4ui8qfhgg',\n",
+    "}\n",
+    "response = client.delete(f'{url}/event/workshop/{id}', headers=dict(headers, **auth_header))\n",
+    "print(response.status_code)\n"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ecab546efc45d271803c8367390e20cc9d8eb48184bb80f1b2a5f6a47202bfef"
+  },
   "kernelspec": {
    "display_name": "Python 3.9.7 64-bit",
-   "name": "python397jvsc74a57bd0e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -343,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   },
   "metadata": {
    "interpreter": {
