--- a/test/notebooks/api.ipynb
+++ b/test/notebooks/api.ipynb
@@ -9,11 +9,11 @@
     "import requests\n",
     "from IPython.display import JSON\n",
     "\n",
-    "DEBUG = True\n",
+    "LOCAL = False\n",
     "\n",
     "url = f\"https://docker78406-saas-kit.jcloud.ik-server.com\"\n",
     "\n",
-    "if DEBUG:\n",
+    "if LOCAL:\n",
     "    import os\n",
     "    from dotenv import load_dotenv\n",
     "\n",
@@ -145,9 +145,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "items": [
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Gazebo",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Salsa"
+         },
+         "eventID": "c66n79ghf17s54lr7mbg",
+         "id": "c66n79ghf17s54lr7mc0",
+         "locationName": "Gazebo",
+         "slug": "Salsa",
+         "starts": "2021-11-12T19:30:00Z",
+         "title": "Salsa"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6f135ohf17s5f6tv1pg",
+         "id": "c6f135ohf17s5f6tv1q0",
+         "locationName": "Ponto",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6rnpb0hf17s5f6tv1qg",
+         "id": "c6rnpb0hf17s5f6tv1r0",
+         "locationName": "Ponto",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6u6u48hf17s5f6tv1rg",
+         "id": "c6u6u48hf17s5f6tv1s0",
+         "locationName": "Ponto",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6u6u80hf17s5f6tv1sg",
+         "id": "c6u6u80hf17s5f6tv1t0",
+         "locationName": "Ponto",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6u6v6ohf17s5f6tv1tg",
+         "id": "c6u6v6ohf17s5f6tv1u0",
+         "locationName": "Ponto",
+         "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6u710ghf17s5f6tv1ug",
+         "id": "c6u710ghf17s5f6tv1v0",
+         "locationName": "Ponto",
+         "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6u7g1ghf17s5f6tv1vg",
+         "id": "c6u7g1ghf17s5f6tv200",
+         "locationName": "Ponto",
+         "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        },
+        {
+         "couples": false,
+         "event": {
+          "instance": "c5263570ono4ui8qfhgg",
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "starts": "0001-01-01T00:00:00Z",
+          "title": "Bachata"
+         },
+         "eventID": "c6uabf8aa6gs5i6q2bag",
+         "id": "c6uabf8aa6gs5i6q2bb0",
+         "locationName": "Ponto",
+         "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+         "slug": "bachata",
+         "starts": "0001-01-01T00:00:00Z",
+         "title": "Bachata"
+        }
+       ],
+       "paging": {
+        "cur": {
+         "end": "c6uabf8aa6gs5i6q2bb0",
+         "size": 9,
+         "start": "c66n79ghf17s54lr7mc0"
+        }
+       }
+      },
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "auth_header = {\n",
     "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
