--- a/test/notebooks/api.ipynb
+++ b/test/notebooks/api.ipynb
@@ -9,7 +9,7 @@
     "import requests\n",
     "from IPython.display import JSON\n",
     "\n",
-    "LOCAL = True\n",
+    "LOCAL = False\n",
     "\n",
     "url = f\"https://docker78406-saas-kit.jcloud.ik-server.com\"\n",
     "\n",
