use gql models in event service

--- a/test/notebooks/api.ipynb
+++ b/test/notebooks/api.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from IPython.display import JSON\n",
     "\n",
-    "LOCAL = False\n",
+    "LOCAL = True\n",
     "\n",
     "url = f\"https://docker78406-saas-kit.jcloud.ik-server.com\"\n",
     "\n",
@@ -39,9 +39,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "accessToken": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJwdXJwIjoiYWNjZXNzIiwicm9sZSI6InN1cGVyIGFkbWluIiwiaW5zdCI6ImM1MjYzNTcwb25vNHVpOHFmaGdnIiwiYXVkIjoic2Fhcy1raXQiLCJleHAiOjE2NDMwNjM0MDgsImlhdCI6MTY0MzA2MjUwOCwiaXNzIjoiYXV0aCIsInN1YiI6ImM1NGJ1OTcwb25vOW9xYWMybWowIn0.mnZ2alsj2m55dlKzTSq75NQnZUGyT3xWrO1WFDy5oUpQSZdWNP4sJ6I6lwCOn5-j5Dd71SGvXoCSgcmot2mt4L4Q46I0PDI3PE2sgsSQOR-mUVBp8tJIt_6ytjyL3qAs7dWqYfiUzQNO1Px9Y_EtvAMJfxWhcwTUIRiOv6pteUwSDy1k3Lz_0c2Q2KjgyyPgi6M5fo58e1rMUFawnQ5RzgdZFOhj13lZcNK8YDU9kN8t7iif8wqk4Rv-3jS_MpV_7NKRy5bRvzFw5-66Qim4MZx8xGBdJOaA-thOkiBr5diBBio_-OHwpItoehglDEH63L6G218vsh-0XYv-4q01rt2iE7D1J2yYSr4TrFpZ3f909nkQb-LSMj6tDWFV_ua7xPnJOkwYYPshw_dzP9yqApLYnxJJGXiAeF4aOjt1ZwKJO9wqoiXq-j7ULjiZzgv5fEiJF_TWhFxHjF-w3loC6WYzhv0b5YkA_EpmnI0tCRUz3W1HXDYHx6PJ9958oN82ZqJwrFI63f7L52vnJq8JqUgRs15PdmWTiPi1nHo3Qs4rTn5WM2dlzAgk0OrN33haaSVUjCBm6XWcA2ZO-TWMDpQBAsd1-OniTOxruRhLeZWlvu6iVLRJtlSmP7y0zDqOa5VZvoALjYKZZIuAhL1eE1lLU1C_CL6rW6MbwmJuaxA",
+       "refreshToken": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJwdXJwIjoicmVmcmVzaCIsImluc3QiOiJjNTI2MzU3MG9ubzR1aThxZmhnZyIsImF1ZCI6InNhYXMta2l0IiwiZXhwIjoxNjQzNjY3MzA4LCJpYXQiOjE2NDMwNjI1MDgsImlzcyI6ImF1dGgiLCJzdWIiOiJjNTRidTk3MG9ubzlvcWFjMm1qMCJ9.BmFEeerdQG6_D0BLeD91pNGTosK86F2GTUegkCPybADp3i7vajiq235-01Pao94UhbRN1JRthVFtU5-ws4YL933NApsTpSI2afRRL99YFk-IhszJianxL4wQObbm3LPCW-geQRzaxoYDaYQ2XocTtFSYNZZ-udKT6uX_onqYy_dIn1CQGhSQNIE1aHOUcb6nvcjztv5ZUWus3WVQOzhQYU5p0GYgcgHngY1ccvv5FWfmtcFq6NjgWQGoTYA8MT4fWVKVLQ2js9gbo_kTb9jSVlZUyVFDCuaPtiLa_EPmfG4jjBv7z_Fz4TJEkBj_TU31poLzIweMitn0NgcM7084xlew8n8Uy2Kp0ilogUQoz3DNeOiembNzJT4t5pVw-FhB3TawPhIIMqP2R6dOMGAkassNV7PC6zJfnhEQ6_b4_Frr-QZ-rroK4hJKTtCS5Rx1jW00vxrRqBOmYqgG3YEr1alfanxseGGnCK7eisYGt6GMylbJmjghzSo10kAvMcTEtVZ-y8KM9of8OGNvIwr5EsyX4dybM_LCQ2QpfG5FGrDgqCj71G6_UxK9k1fWSuvFllxZsK9k8uPj_lerj_UxSaDB8iw4TmhkNuUEF2KTRov3xnaPIxYBxAAOwmxJYlMecZtGojs00AhXmgzBeNi45b8iZn6Y37eKbhTe7EVCqxE",
+       "role": "super admin",
+       "rolesSpec": [
+        {
+         "inherited": [
+          "",
+          "super admin"
+         ],
+         "role": "super admin"
+        },
+        {
+         "inherited": [
+          "",
+          "instance admin",
+          "event organizer",
+          "teacher"
+         ],
+         "role": "instance admin"
+        },
+        {
+         "inherited": [
+          "event organizer",
+          "teacher",
+          ""
+         ],
+         "role": "event organizer"
+        },
+        {
+         "inherited": [
+          "",
+          "teacher"
+         ],
+         "role": "teacher"
+        }
+       ]
+      },
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "payload = {\n",
     "    'email': 'simon@smartnuance.com',\n",
@@ -64,9 +125,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "accessToken": "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJwdXJwIjoiYWNjZXNzIiwicm9sZSI6InN1cGVyIGFkbWluIiwiaW5zdCI6ImM1MjYzNTcwb25vNHVpOHFmaGdnIiwiYXVkIjoic2Fhcy1raXQiLCJleHAiOjE2NDMwNjUyNzksImlhdCI6MTY0MzA2NDM3OSwiaXNzIjoiYXV0aCIsInN1YiI6ImM1NGJ1OTcwb25vOW9xYWMybWowIn0.CaTGOQo1zLrQm_mwRFRb_eSNAnUMND9JXAkwZkTtCb1bI8fuahtfUGlBt0ORn-9VHjvbJ9JF79rpbyVMG5ermAmeLPT9EliTuBxoMH9h95TrrG81ZBXmDS-HSQvWBklzgzpwX8mNncVd7k0BuHk0KptbNUGXZcGxwtJvgtAX2Rjg_JSMMVGNOVxQiMFPL8wkYowScRhQopVt0W-pFwDTnWLveBKySfrHmmMUPcSHbyr0MHxXncnvfWLZN6eQD0fbHr8jLP_EwvORF7qT6Ka1ZejdH9WQbRmm7Rw2LWxCrGy3ngg1dz41TPzPrI32sqaBYsjCs_D9NUR3XvozW9TEWN3emTmoJRMBEEFteSEiJe3D7efgqKlYYIDREfyhKp0CXZTN-dH4BIyDRmcAn0qIQKErumo2JeGOKmMgb4D8DMizKJGWYJR2zZj3huH0m7ylNZA7WkXtwbF-OqwHAbCx-234Ecr0a41AlFI1wX4OegwSbweBNgIxNrj8D25poF7gnnOpDZBYXJjjChd4P9qMGItF-KUOJMILtrWGyBaDRoP84lFuwKN0X1VHgULpVbCZadYt-eXXA6GRHT1E_ejfsRv9mSV0TAnB1Yh-1peZUXBNIRp05MRwwEOv8WslBvHwRFTLInmOuA49xpOnmlTs79fwgl3fGWJFc6EQlgKC2nk"
+      },
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "payload = {\n",
     "    'refreshToken': login_res[\"refreshToken\"],\n",
@@ -113,18 +200,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "message": "workshop created successfully!",
+       "status": 201,
+       "workshopID": "c7niujn0ono6n9319da0"
+      },
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import random\n",
     "titles = ['Yoga', 'Salsa', 'Martial arts', 'Jam session', 'Pilates', 'Zumba', 'Belly dance']\n",
     "title = random.choice(titles)\n",
     "payload = {\n",
-    "    'title': title,\n",
-    "    'slug': title.replace(' ', '-').lower(),\n",
-    "    'locationName': 'Ponto',\n",
-    "    'locationURL': 'https://goo.gl/maps/wE3viADXW1CB7LNP9',\n",
+    "    'workshopInfo': {\n",
+    "        'title': title,\n",
+    "        'slug': title.replace(' ', '-').lower(),\n",
+    "        'locationName': 'Ponto',\n",
+    "        'locationURL': 'https://goo.gl/maps/wE3viADXW1CB7LNP9',\n",
+    "    }\n",
     "}\n",
     "auth_header = {\n",
     "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
@@ -147,9 +264,297 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "items": [
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Yoga"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufp7n0ono1nc2n33n0",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "yoga",
+          "title": "Yoga"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Jam session"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufp7v0ono1nc2n33o0",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "jam-session",
+          "title": "Jam session"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Marshal arts"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufp8n0ono1nc2n33u0",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "marshal-arts",
+          "title": "Marshal arts"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Marshal arts"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufp8n0ono1nc2n33v0",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "marshal-arts",
+          "title": "Marshal arts"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Belly dance"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufpun0ono1nc2n3410",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "belly-dance",
+          "title": "Belly dance"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Salsa"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufpuv0ono1nc2n3420",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "salsa",
+          "title": "Salsa"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Zumba"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufpuv0ono1nc2n3430",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "zumba",
+          "title": "Zumba"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Zumba"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufpuv0ono1nc2n3440",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "zumba",
+          "title": "Zumba"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Zumba"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c6ufpuv0ono1nc2n3450",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "zumba",
+          "title": "Zumba"
+         }
+        },
+        {
+         "ends": null,
+         "event": {
+          "ends": null,
+          "eventInfo": {
+           "locationName": "Ponto",
+           "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+           "slug": "",
+           "title": "Jam session"
+          },
+          "id": "c5263570ono4ui8qfhgg",
+          "instance": null,
+          "starts": "0001-01-01T00:00:00Z"
+         },
+         "id": "c7niu8v0ono6n9319d20",
+         "instance": "",
+         "starts": "0001-01-01T00:00:00Z",
+         "workshopInfo": {
+          "couples": false,
+          "locationName": "Ponto",
+          "locationURL": "https://goo.gl/maps/wE3viADXW1CB7LNP9",
+          "slug": "jam-session",
+          "title": "Jam session"
+         }
+        }
+       ],
+       "paging": {
+        "cur": {
+         "end": "c7niu8v0ono6n9319d20",
+         "size": 10,
+         "start": "c6ufp7n0ono1nc2n33n0"
+        },
+        "next": {
+         "size": 10,
+         "start": "c7niu8v0ono6n9319d20"
+        }
+       }
+      },
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "auth_header = {\n",
     "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
@@ -171,9 +576,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "delete c6ufp6v0ono1nc2n33m0\n",
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "id = workshops[0][\"id\"]\n",
     "print(f\"delete {id}\")\n",
@@ -207,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.1"
   },
   "metadata": {
    "interpreter": {
