switch to gRPC/protobuf

--- a/test/notebooks/api.ipynb
+++ b/test/notebooks/api.ipynb
@@ -101,7 +101,7 @@
     "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
     "}\n",
     "response = client.delete(f'{url}/auth/revoke/all', json=payload, headers=dict(headers, **auth_header))\n",
-    "print(response.status_code)\n"
+    "print(response.status_code)"
    ]
   },
   {
@@ -138,8 +138,9 @@
     "\n",
     "response = client.put(f'{url}/event/workshop', json=payload, headers=dict(headers, **auth_header))\n",
     "print(response.status_code)\n",
-    "workshop = response.json()\n",
-    "JSON(workshop)\n"
+    "if response.status_code == 201:\n",
+    "    workshop = response.json()\n",
+    "    JSON(workshop)"
    ]
   },
   {
@@ -160,12 +161,11 @@
     "    'role': 'event organizer',\n",
     "    'instance': 'c5263570ono4ui8qfhgg',\n",
     "}\n",
-    "print(f'Bearer {login_res[\"accessToken\"]}')\n",
     "response = client.get(f'{url}/event/workshop/list', headers=dict(headers, **auth_header))\n",
     "print(response.status_code)\n",
-    "workshops = response.json()[\"items\"]\n",
-    "JSON(response.json())\n",
-    "\n"
+    "if response.status_code == 200:\n",
+    "    workshops = response.json()[\"items\"]\n",
+    "    JSON(response.json())"
    ]
   },
   {
@@ -190,60 +190,7 @@
     "    'instance': 'c5263570ono4ui8qfhgg',\n",
     "}\n",
     "response = client.delete(f'{url}/event/workshop/{id}', headers=dict(headers, **auth_header))\n",
-    "print(response.status_code)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using GraphQL API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"\"\"query {\n",
-    "  workshops {\n",
-    "    items {\n",
-    "      id,\n",
-    "      workshopInfo {\n",
-    "        title,\n",
-    "        locationName,\n",
-    "        couples,\n",
-    "      },\n",
-    "      event {\n",
-    "        ends,\n",
-    "      }\n",
-    "    },\n",
-    "    paging {\n",
-    "      prev {\n",
-    "        end\n",
-    "      }\n",
-    "      cur {\n",
-    "        start\n",
-    "        end\n",
-    "      }\n",
-    "      next {\n",
-    "        start\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "}\"\"\"\n",
-    "\n",
-    "auth_header = {\n",
-    "    'Authorization': f'Bearer {login_res[\"accessToken\"]}',\n",
-    "    'role': 'event organizer',\n",
-    "    'instance': 'c5263570ono4ui8qfhgg',\n",
-    "}\n",
-    "response = client.post(f'{url}/query', headers=dict(headers, **auth_header), json={\"query\": query})\n",
-    "print(response.status_code)\n",
-    "JSON(response.json()[\"data\"][\"workshops\"][\"items\"])\n",
-    "JSON(response.json()[\"data\"][\"workshops\"][\"paging\"])\n",
-    "JSON(workshops)\n"
+    "print(response.status_code)"
    ]
   }
  ],
@@ -266,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   },
   "metadata": {
    "interpreter": {
