--- a/test/notebooks/api.ipynb
+++ b/test/notebooks/api.ipynb
@@ -11,9 +11,9 @@
     "from pprint import pprint\n",
     "JSON = pprint\n",
     "\n",
-    "LOCAL = True\n",
+    "LOCAL = False\n",
     "\n",
-    "url = f\"https://docker78406-saas-kit.jcloud.ik-server.com\"\n",
+    "url = f\"https://saas-kit.smartnuance.com/\"\n",
     "\n",
     "if LOCAL:\n",
     "    import os\n",
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "metadata": {
    "interpreter": {
